--- a/style.css
+++ b/style.css
@@ -18,6 +18,17 @@ body {
 	animation: Gradient 15s ease infinite;
 }
 
+footer {
+	position: absolute;
+	bottom: 10px;
+}
+
+.footer {
+	color: #ffffff;
+	align-items: center;
+    /* width: 100%; */
+}
+
 .navbar li {
 	display: inline-block;
 	text-decoration: none;
@@ -67,6 +78,7 @@ body {
 .btn:hover {
 	color: black;
 	background-color: white;
+	animation: shake-animation 3s ease;
 }
 
 .btnlist {
@@ -80,6 +92,8 @@ body {
 	animation: shake-animation 3s ease infinite;
 	transform-origin: 50% 50%;
 }
+
+a, a:hover, a:active, a:visited { color: white; }
 
 .backdrop {
 	-moz-box-shadow: 0px 6px 5px #111; 
